// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render active 1`] = `
<div
  class="wp-components-elevation css-cz4naa"
  data-g2-c16t="true"
  data-g2-component="Elevation"
/>
`;

exports[`props should render correctly 1`] = `
<div
  class="wp-components-elevation css-j384fw"
  data-g2-c16t="true"
  data-g2-component="Elevation"
/>
`;

exports[`props should render hover 1`] = `
<div
  class="wp-components-elevation css-1rkzqa6"
  data-g2-c16t="true"
  data-g2-component="Elevation"
/>
`;

exports[`props should render isInteractive 1`] = `
<div
  class="wp-components-elevation css-104q32t"
  data-g2-c16t="true"
  data-g2-component="Elevation"
/>
`;

exports[`props should render offset 1`] = `
<div
  class="wp-components-elevation css-sv8kl6"
  data-g2-c16t="true"
  data-g2-component="Elevation"
/>
`;

exports[`props should render value 1`] = `
<div
  class="wp-components-elevation css-1odq63z"
  data-g2-c16t="true"
  data-g2-component="Elevation"
/>
`;
